force-app/main/default/objects/Vital_c__c/Vital_c__c.object-meta.xml
<CustomObject>
    <label>Vital__c</label>
    <nameField>
        <label>Vital__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vital__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>