force-app/main/default/objects/Vital_c__c/fields/Patient_Link__c.field-meta.xml
<CustomField>
    <fullName>Patient_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Link</label>
    <referenceTo>Patient_c__c</referenceTo>
    <relationshipLabel>patient</relationshipLabel>
    <relationshipName>patient_c</relationshipName>
    <type>Lookup</type>
</CustomField>