force-app/main/default/objects/Vital_c__c/fields/Pulse_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Pressure__c</fullName>
    <formula>Systolic_BP__c - Diastolic_BP__c</formula>
    <label>Pulse Pressure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>