force-app/main/default/objects/Vital_c__c/fields/Pulse_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Rate__c</fullName>
    <label>Pulse Rate</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>