force-app/main/default/objects/Vital_c__c/fields/Systolic_BP__c.field-meta.xml
<CustomField>
    <fullName>Systolic_BP__c</fullName>
    <label>Systolic BP</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>