force-app/main/default/objects/Vital_c__c/fields/Temperature_c__c.field-meta.xml
<CustomField>
    <fullName>Temperature_c__c</fullName>
    <label>Body Temperature</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>