force-app/main/default/objects/Vital_c__c/validationRules/Systolic.validationRule-meta.xml
<ValidationRule>
    <fullName>Systolic</fullName>
    <active>true</active>
    <errorConditionFormula>Systolic_BP__c &lt; Diastolic_BP__c</errorConditionFormula>
    <errorDisplayField>Systolic_BP__c</errorDisplayField>
    <errorMessage>&quot;Systolic pressure must
be greater than diastolic
pressure.&quot;</errorMessage>
</ValidationRule>