force-app/main/default/objects/Vital_c__c/validationRules/Systolic1.validationRule-meta.xml
<ValidationRule>
    <fullName>Systolic1</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Pulse_Rate__c &lt; 20, Pulse_Rate__c &gt; 250)</errorConditionFormula>
    <errorDisplayField>Pulse_Rate__c</errorDisplayField>
    <errorMessage>&quot;Pulse values must fall
within standard physical
ranges.&quot;</errorMessage>
</ValidationRule>